--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 .header{
 	width:850px;
 	margin:auto;
-	padding-top:100px;">
+	margin-top:25px;
 }
 
 .photo-container{
@@ -11,15 +11,35 @@
 .photo-row{
 	display:block;
 	height:650px;
-	margin-top:50px;
-	margin-bottom:50px;	
+	width: 1344px;
+	margin-top:0px;
+	margin-bottom:12px;	
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.photo-row-full{
+	display:block;
+	height: 1312px;
+	width: 1344px;
+	margin-top:0px;
+	margin-bottom:12px;	
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .photo-item{
 	display:inline-block;
 	width:650px;
-	margin-left:50px;
-	margin-right:50px;	
+	margin-left:11px;
+	margin-right:11px;	
+}
+
+.photo-item-full{
+	display:inline-block;
+	width:1505px;
+	margin-left:auto;
+	margin-right:auto;	
 }
 
 .photo-border{
@@ -59,9 +79,23 @@
   left:142;
 }
 
+.photo-content-645P_large{
+  position: absolute;
+  top:75;
+  left:249;
+}
+
+.photo-content-120_large{
+  position: absolute;
+  top:75;
+  left:86;
+}
+
+
 
 a{
 	text-decoration: none;
+	font-size: 0px;
 }
 
 p{
