--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: Barrett;
+    src: url("./barrer.ttf") format("truetype");
+}
+
 .photo-row{
 	display:block;
 	height:650px;
@@ -74,6 +79,20 @@
 	filter: drop-shadow(12px 8px 8px #555555);
 }
 
+.spunky-navbar{
+	padding-top: 24px;
+}
+
+button.spunky-navbar-link{
+	filter: drop-shadow(12px 8px 8px #555555);
+	font-size: 36px;
+	text-decoration: none;
+	color: white;
+	
+	padding-left: 12px;
+	padding-right: 12px;
+}
+
 a{
 	text-decoration: none;
 	font-size: 0px;
@@ -92,4 +111,8 @@ button {
 
 button:focus {
   outline: none;
+}
+
+.barrett {
+	font-family: Barrett;
 }
