--- a/assets/style.css
+++ b/assets/style.css
@@ -30,23 +30,24 @@
 	margin-bottom: 24px;
 }
 
-.photo-item-full{
-	width:1505px;
-	margin-left:auto;
-	margin-right:auto;	
+.photo-item-mobile{
+	width:546px;
+	height: 546px;
+	display: inline-block;
+	margin-bottom: 48px;
 }
 
 .photo-border{
-    grid-column: 1;
-  grid-row: 1;
-  z-index:10;
+	grid-column: 1;
+	grid-row: 1;
+	z-index:10;
 }
 
 .photo-border-mask{
-  grid-column: 1;
-  grid-row: 1;
-  z-index:8;
-  filter: drop-shadow(12px 8px 8px #555555);
+	grid-column: 1;
+	grid-row: 1;
+	z-index:8;
+	filter: drop-shadow(12px 8px 8px #555555);
 }
 
 .photo{
